--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
 <h1>Odin Recipes</h1>
-
+<p>This page has top tier recipes because they are my girlfriend&apos;s favorite recipes! 333 </p>
 <ul>
     <li><a href="recipes/chaulafan.html" target="_blank" rel="noopener noreferer">Chaulafan Recipe</a></li>
     <img src="images/chaulafan.jpg" alt="an image of an ecuadorean dish named chaulafan" height="300">
