--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="index_style.css">
 </head>
 <body>
     
-<h1>Odin Recipes</h1>
-<p>This page has top tier recipes because they are my girlfriend&apos;s favorite recipes! 333 </p>
+<div class="inicio"><h1>Odin Recipes</h1>
+<p>This page has top tier recipes because they are my girlfriend&apos;s favorite recipes! 333 </p></div>
 <ul>
-    <li><a href="recipes/chaulafan.html" target="_blank" rel="noopener noreferer">Chaulafan Recipe</a></li>
-    <img src="images/chaulafan.jpg" alt="an image of an ecuadorean dish named chaulafan" height="300">
-    <li><a href="recipes/cevichocho.html" target="_blank" rel="noopener noreferer">Cevichocho Recipe</a></li>
-    <img src="images/cevichocho.jpg" alt="an image of an ecuadorean dish named cevichocho" height="225">
-    <li><a href="recipes/salchipapa.html" target="_blank" rel="noopener noreferer">Salchipapa Recipe</a></li>
-    <img src="images/salchipapa.jpg" alt="an image of an ecuadorean dish named salchipapa" height="223">
+    <div class="comida"><li><a href="recipes/chaulafan.html" target="_blank" rel="noopener noreferer">Chaulafan Recipe</a></li>
+    <img src="images/chaulafan.jpg" alt="an image of an ecuadorean dish named chaulafan" height="300"></div>
+    <div class="comida"><li><a href="recipes/cevichocho.html" target="_blank" rel="noopener noreferer">Cevichocho Recipe</a></li>
+    <img src="images/cevichocho.jpg" alt="an image of an ecuadorean dish named cevichocho" height="225"></div>
+    <div class="comida"><li><a href="recipes/salchipapa.html" target="_blank" rel="noopener noreferer">Salchipapa Recipe</a></li>
+    <img src="images/salchipapa.jpg" alt="an image of an ecuadorean dish named salchipapa" height="223"></div>
 </ul>
 
 </body>
